--- a/css/style.css
+++ b/css/style.css
@@ -25,21 +25,22 @@ body {
     color: #fff;
 }
 
-.pesquisar {
+.search-box {
     position: relative;
     width: 100%;
     height: 55px;
+    background: slateblue;
     display: flex;
     align-items: center;
 }
 
-.pesquisar i {
+.search-box i {
     position: absolute;
     left: 10px;
     font-size: 28px;
 }
 
-.pesquisar input {
+.search-box input {
 
     position: absolute;
     width: 100%;
@@ -50,16 +51,17 @@ body {
     border-radius: 10px;
     font-size: 22px;
     color: #fff;
-    font-weight: uppercase;
+    font-weight: 500;
+    text-transform: uppercase;
     padding: 0 48px 0 42px;
 }
 
-.pesquisar input::placeholder {
+.search-box input::placeholder {
     color: #fff;
     text-transform: capitalize;
 }
 
-.pesquisar button {
+.search-box button {
     position: absolute;
     right: 0;
     width: 40px;
@@ -73,18 +75,83 @@ body {
     cursor: pointer;
 }
 
-.weather-box {
+.weather-box{
     text-align: center;
-    margin: 40px 0;
+    margin: 40px 0 ;
 }
-
-.weather-box object{
-    width: 0%;
+.weather-box img{
+    width: 60%;
 }
-
-.weather-box .temperatura {
-    position: relative;
-    font-size: 550px;
+.weather-box .temperature {
+    position: relative; 
+    font-size: 64px;
     line-height: 1;
-    font-weight: 700px;
+    font-weight: 700;
+    margin: 20px 0 6px -30px;
+    color: #fff;
+ }
+ 
+.weather-box .temperature span{
+    position: absolute;
+    font-size: 24px;
+    margin-left: 4px;
+}
+.weather-box .description{
+    font-size: 22px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+.weather-details{
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+    width: 100%;
+    padding: 0 20px;
+    display: flex;
+}
+
+.weather-details .humidity, .weather-details .wind{
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+
+.weather-details .humidity{
+    padding-left: 20px;
+    justify-content: flex-start;
+}
+
+.weather-details .wind{
+    padding: 20px;
+    justify-content: flex-end;
+}
+
+.weather-details i{
+    font-size: 56px;
+    margin-right: 10px;
+}
+
+.weather-details span{
+    display: inline-block;
+    font-weight: 500;
+}
+.weather-details p{
+    font-size: 14px;
+    font-weight: 500;
+}
+.semLocalizacao{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    margin-top: 110px;
+}
+.semLocalizacao img{
+    width: 65%;
+}
+.semLocalizacao p{
+    font-size:22px;
+    font-weight: 500;
+    margin-top: 12px;
 }
