--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,500;1,600&display=swap');
-
+ 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
-
+header{
+    background-color: #354488;
+}
+ 
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: rebeccapurple;
+    background: #4e5aa1;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
 }
-
+ 
 .container {
     position: relative;
     width: 400px;
-    height: 555px;
-    background: purple;
+    height: 100px;
+    background: rgba(255,255, 255, .1);
+    backdrop-filter:blur(30px);
+    border: 2px solid rgb(255,255, 255, .2);
     border-radius: 16px;
     padding: 20px;
     color: #fff;
+    transition: height .6s ease;
 }
-
+ 
 .search-box {
     position: relative;
     width: 100%;
     height: 55px;
-    background: slateblue;
     display: flex;
     align-items: center;
 }
-
+ 
 .search-box i {
     position: absolute;
     left: 10px;
     font-size: 28px;
 }
-
+ 
 .search-box input {
-
+ 
     position: absolute;
     width: 100%;
     height: 100%;
@@ -55,12 +63,12 @@ body {
     text-transform: uppercase;
     padding: 0 48px 0 42px;
 }
-
+ 
 .search-box input::placeholder {
     color: #fff;
     text-transform: capitalize;
 }
-
+ 
 .search-box button {
     position: absolute;
     right: 0;
@@ -74,16 +82,51 @@ body {
     padding: 0 40px 0 5px;
     cursor: pointer;
 }
-
+ 
 .weather-box{
     text-align: center;
     margin: 40px 0 ;
 }
+ 
+.weather-box, .weather-details, .not-found{
+    overflow: hidden;
+    visibility: hidden;
+}
+ 
+.weather-box.active, .weather-details.active, .not-found.active{
+    visibility: visible;
+}
+ 
+.weather-box .box,
+.not-found .box{
+    transform: translateY(-100%);
+}
+ 
+.weather-box .box .info-weather{
+    transform: translateY(-120%);
+}
+ 
+ 
+.container.active .weather-details .humidity .info-humidity,
+.container.active .weather-details .wind .info-wind,
+.container.active .weather-box .box .info-weather{
+    transform: translateY(0%);
+    transition: transform 1s ease;
+}
+ 
+.weather-box.active .box,
+.not-found.active .box{
+    transform: translateY(0%);
+    transition: transform 1s ease;
+    transition-delay: .6s;
+}
+ 
+ 
 .weather-box img{
     width: 60%;
 }
 .weather-box .temperature {
-    position: relative; 
+    position: relative;
     font-size: 64px;
     line-height: 1;
     font-weight: 700;
@@ -109,37 +152,50 @@ body {
     padding: 0 20px;
     display: flex;
 }
-
+ 
 .weather-details .humidity, .weather-details .wind{
     display: flex;
     align-items: center;
     width: 50%;
+    transform: translateY(-100%);
 }
-
+ 
+.weather-details .humidity .info-humidity, .weather-details .wind .info-wind{
+    transform: translateY(-100%);
+    overflow: hidden;
+}
+ 
+.weather-details.active .humidity, .weather-details.active .wind{
+    transform: translateY(0%);
+    transition: transform 1s ease;
+    transition-delay: 1.2s;
+}
+ 
 .weather-details .humidity{
     padding-left: 20px;
     justify-content: flex-start;
 }
-
+ 
 .weather-details .wind{
     padding: 20px;
     justify-content: flex-end;
 }
-
+ 
 .weather-details i{
     font-size: 56px;
     margin-right: 10px;
 }
-
+ 
 .weather-details span{
     display: inline-block;
+    font-size: 22px;
     font-weight: 500;
 }
 .weather-details p{
     font-size: 14px;
     font-weight: 500;
 }
-.semLocalizacao{
+.not-found{
     position: absolute;
     top:0;
     left: 0;
@@ -147,11 +203,47 @@ body {
     text-align: center;
     margin-top: 110px;
 }
-.semLocalizacao img{
+.not-found img{
     width: 65%;
 }
-.semLocalizacao p{
-    font-size:22px;
+.not-found p{
+    font-size:20px;
     font-weight: 500;
     margin-top: 12px;
+}
+.city-hide{
+    display: none;
+}
+ 
+#clone-info-weather,
+#clone-info-humidity,
+#clone-info-wind{
+    position: absolute;
+    transform: translateY(-100%);
+}
+ 
+#clone-info-weather .weather{
+    transform: translateY(120%);
+    transition: transform 1s ease, opacity 8s;
+    transition-delay: 0s, 2s;
+}
+ 
+.weather-box:not(.active) #clone-info-weather .weather{
+    opacity: 0;
+    transition-delay: 0s;
+}
+ 
+.active-clone#clone-info-weather .weather{
+    transform: translateY(0%);
+}
+ 
+#clone-info-humidity span,
+#clone-info-wind span{
+    transform: translateY(100%);
+    transition: transform 1s ease;
+}
+ 
+.active.clone#clone-info-humidity span,
+.active.clone#clone-info-wind span{
+    transform: translateY(0%);
 }
